force-app/main/default/objects/Reseller_Account_Plan__c/Reseller_Account_Plan__c.object-meta.xml
<CustomObject>
    <description>Here we track what we have agreed with our Resellers for the current fiscal year</description>
    <label>Reseller Account Plan</label>
    <nameField>
        <label>Reseller Account Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reseller Account Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>