force-app/main/default/objects/Reseller_Account_Plan__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Account of the Reseller for which this plan is</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Reseller Account Plans</relationshipLabel>
    <relationshipName>Reseller_Account_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>