force-app/main/default/objects/Reseller_Account_Plan__c/fields/Reseller_Commission__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Commission__c</fullName>
    <formula>Target_Amount_CAD__c * 0.2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reseller Commission (CAD)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>