force-app/main/default/objects/Reseller_Account_Plan__c/fields/Target_Amount_USD__c.field-meta.xml
<CustomField>
    <fullName>Target_Amount_USD__c</fullName>
    <description>The Quota for the current Fiscal Year for the Reseller partner</description>
    <label>Target Amount USD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>